--- a/src/AvenueClothing.Feature.Transaction.Module/packages.config
+++ b/src/AvenueClothing.Feature.Transaction.Module/packages.config
@@ -4,4 +4,5 @@
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="uCommerce.Core" version="7.2.1.16274" targetFramework="net452" />
 </packages>
