--- a/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
+++ b/src/AvenueClothing.Feature.Transaction.Module/AvenueClothing.Feature.Transaction.Module.csproj
@@ -118,10 +118,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Controllers\AddToBasketController.cs" />
     <Compile Include="Controllers\MiniBasketController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ViewModels\AddToBasketButtonViewModel.cs" />
+    <Compile Include="ViewModels\AddToBasketIndexViewModel.cs" />
     <Compile Include="ViewModels\ValidateProductExistsViewModel.cs" />
     <Compile Include="ViewModels\AddToBasketViewModel.cs" />
   </ItemGroup>
@@ -134,7 +134,7 @@
     <Content Include="Scripts\js-add-to-basket-button.js" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Product\AddToBasketButton.cshtml" />
+    <Content Include="Views\AddToBasket\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
