--- a/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
+++ b/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
@@ -130,6 +130,7 @@
     <Compile Include="Controllers\FacetsController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\CategoryNavigationController.cs" />
+    <Compile Include="Controllers\QuantityPickerController.cs" />
     <Compile Include="Controllers\VariantPickerController.cs" />
     <Compile Include="Extensions\FacetedQueryStringExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -141,6 +142,7 @@
     <Compile Include="ViewModels\FacetViewModel.cs" />
     <Compile Include="ViewModels\HomepageCatalogViewModel.cs" />
     <Compile Include="ViewModels\ProductViewModel.cs" />
+    <Compile Include="ViewModels\QuantityPickerViewModel.cs" />
     <Compile Include="ViewModels\VariantExistsViewModel.cs" />
     <Compile Include="ViewModels\VariantPickerViewModel.cs" />
   </ItemGroup>
@@ -148,6 +150,7 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\js-quantity-picker.js" />
     <Content Include="Scripts\js-variant-picker.js" />
     <Content Include="Scripts\uCommerce.facets.js" />
     <Content Include="Views\CategoryNavigation.cshtml" />
@@ -169,6 +172,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\HomepageCatalog.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\QuantityPicker\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
