--- a/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Catalog/Product Card.yml
+++ b/src/project/AvenueClothing/serialization/Renderings/Renderings/Commerce/Catalog/Product Card.yml
@@ -1,5 +1,5 @@
 ﻿---
-ID: "9851f13d-1dc8-4d36-8c99-6c2e42d115b8"
+ID: "b82b3313-82e1-4d4d-9c3c-2935e1e6e0c0"
 Parent: "ea28baf4-62fa-4fa9-80f9-07c39608e5e7"
 Template: "2a3e91a0-7987-44b5-ab34-35c2d9de83b9"
 Path: /sitecore/layout/Renderings/Commerce/Catalog/Product Card
@@ -8,6 +8,9 @@ SharedFields:
 - ID: "ded9e431-3604-4921-a4b3-a6ec7636a5b6"
   Hint: Controller Action
   Value: ProductCard
+- ID: "e144d9d4-b135-42d4-a5a0-53c09704671c"
+  Hint: Parameters
+  Value: Product
 - ID: "e64ad073-dfcc-4d20-8c0b-fe5aa6226cd7"
   Hint: Controller
   Value: ProductCard
@@ -18,4 +21,4 @@ Languages:
     Fields:
     - ID: "25bed78c-4957-4165-998a-ca1b52f67497"
       Hint: __Created
-      Value: 20161005T062157Z
+      Value: 20161006T104615Z
