--- a/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing.yml
+++ b/src/project/AvenueClothing/serialization/Avenue Clothing/content/AvenueClothing.yml
@@ -35,6 +35,10 @@ SharedFields:
           id="{74D43CB5-4D7A-470F-A042-8954F2B5A75B}"
           ph="main"
           uid="{24471DBA-9114-46FD-9406-0A671E698CE4}" />
+        <r
+          id="{C4E87C84-4131-4523-9701-247E82AA72C1}"
+          ph="breadcrumb"
+          uid="{B05ED069-1CBB-4103-A1EF-5F6F2173EDF4}" />
       </d>
     </r>
 Languages:
