--- a/src/AvenueClothing.B2C/packages.config
+++ b/src/AvenueClothing.B2C/packages.config
@@ -19,6 +19,9 @@
   <package id="Rainbow.Core" version="1.3.1" targetFramework="net461" />
   <package id="Rainbow.Storage.Sc" version="1.3.1" targetFramework="net461" />
   <package id="Rainbow.Storage.Yaml" version="1.3.1" targetFramework="net461" />
+  <package id="SimpleInjector" version="3.2.2" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web" version="3.2.2" targetFramework="net461" />
+  <package id="SimpleInjector.Integration.Web.Mvc" version="3.2.2" targetFramework="net461" />
   <package id="uCommerce.Core" version="7.2.1.16274" targetFramework="net461" />
   <package id="Unicorn" version="3.2.0" targetFramework="net461" />
   <package id="Unicorn.Core" version="3.2.0" targetFramework="net461" />
