--- a/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
+++ b/src/AvenueClothing.Feature.Catalog.Module/AvenueClothing.Feature.Catalog.Module.csproj
@@ -150,6 +150,7 @@
     <Content Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\js-infinite-scrolling.js" />
     <Content Include="Scripts\js-quantity-picker.js" />
     <Content Include="Scripts\js-variant-picker.js" />
     <Content Include="Scripts\uCommerce.facets.js" />
