--- a/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
+++ b/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
@@ -165,12 +165,13 @@
     <Content Include="packages.config" />
     <Content Include="Scripts\js-address.js" />
     <Content Include="Scripts\js-mini-basket.js" />
-    <Content Include="Scripts\js-add-to-basket-button.js" />
+    <Content Include="Scripts\jsAddToBasketButton.js" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\js-payment-picker.js" />
     <Content Include="Scripts\js-shipping-picker.js" />
     <Content Include="Scripts\js-voucher.js" />
+    <Content Include="Scripts\jsQuantityPicker.js" />
     <Content Include="Views\AddToBasketButton\Rendering.cshtml" />
   </ItemGroup>
   <ItemGroup>
