--- a/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
+++ b/src/AvenueClothing.Project.Transaction/AvenueClothing.Project.Transaction.csproj
@@ -164,7 +164,7 @@
   <ItemGroup>
     <Content Include="packages.config" />
     <Content Include="Scripts\js-address.js" />
-    <Content Include="Scripts\js-mini-basket.js" />
+    <Content Include="Scripts\jsMiniBasket.js" />
     <Content Include="Scripts\jsAddToBasketButton.js" />
   </ItemGroup>
   <ItemGroup>
